--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.11.11",
     "asyncpg>=0.30.0",
+    "numpy>=2.2.1",
     "requests>=2.32.3",
 ]
